--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
                     >Capítulo 7</a
                   >
                 </li>
+                <li>
+                  <a href="#" class="opc-main-bg" data-filter=".cap8"
+                    >Capítulo 8</a
+                  >
+                </li>
               </ul>
             </div>
             <div class="iso-box-section">
@@ -203,12 +208,12 @@
                 </div>
 
                 <div
-                  class="iso-box cap4 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
+                  class="iso-box cap1 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
                 >
                   <iframe
                     width="300"
                     height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
+                    src="https://www.youtube.com/embed/Yin5noHLBls"
                     frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen
@@ -216,12 +221,12 @@
                 </div>
 
                 <div
-                  class="iso-box cap5 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
+                  class="iso-box cap1 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
                 >
                   <iframe
                     width="300"
                     height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
+                    src="https://www.youtube.com/embed/DIDcRCWrs5M"
                     frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen
@@ -229,51 +234,12 @@
                 </div>
 
                 <div
-                  class="iso-box cap6 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
+                  class="iso-box cap1 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
                 >
                   <iframe
                     width="300"
                     height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-
-                <div
-                  class="iso-box cap7 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
-                >
-                  <iframe
-                    width="300"
-                    height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-
-                <div
-                  class="iso-box cap7 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
-                >
-                  <iframe
-                    width="300"
-                    height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                </div>
-
-                <div
-                  class="iso-box cap7 col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3"
-                >
-                  <iframe
-                    width="300"
-                    height="170"
-                    src="https://www.youtube.com/embed/b_mp1Z25RI8"
+                    src="https://www.youtube.com/embed/m6keJxFVKao"
                     frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen
@@ -298,7 +264,7 @@
           >
             <h2 class="tm-section-title tm-red-text">Contato</h2>
             <p>
-              Se vocẽ tem alguma dúvida, susgestão ou está precisando de ajuda,
+              Se tem alguma dúvida, susgestão ou está precisando de ajuda,
               conte-nos! A nossa equipe irá responder o mais breve possível.
             </p>
 
@@ -340,8 +306,8 @@
         </div>
         <div class="tm-copyright-div">
           <p class="tm-copyright-text">
-            Copyright &copy; <span class="tm-current-year">2020</span> Your
-            Company - Hevolsoft
+            Copyright &copy; <span class="tm-current-year">2020</span> Em
+            desenvolvimento - Hevolsoft
           </p>
         </div>
       </section>
